exports[`(.not).toHaveMultipleChoicesStatus > using axios > .not.toHaveMultipleChoicesStatus > fails when response have status code 300 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveMultipleChoicesStatus()</intensity>

Expected status code to not be 300 received:
  <red>300</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 300,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveMultipleChoicesStatus > using axios > .toHaveMultipleChoicesStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveMultipleChoicesStatus()</intensity>

Expected status code to be 300 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
